src/test/resources/valid_programs/while_stm_simple.notc
// No output, just checks if the simplest generated while statement is valid

void main() {
    while (false) {
    }
}
