src/test/resources/syntax_errors/if_while.notc
void main() {
    if (while) {
    } else {
    }
    
}
